--- a/.docker/nginx.conf
+++ b/.docker/nginx.conf
@@ -36,6 +36,10 @@ http {
         root /var/www/public;
         index index.html index.htm;
 
+        location /assets {
+            root /var/www/public/;
+        }
+
         location / {
             proxy_pass http://nodejs:3000;
             proxy_http_version 1.1;
