--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.5.4",
-    "sqlite3": "^4.1.1"
+    "sqlite3": "^4.1.1",
+    "hbs": "^4.1.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^7.0.0",
