--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,5 +16,6 @@ services:
       dockerfile: ./.docker/nginx.dockerfile
     volumes:
       - .docker/nginx.conf:/etc/nginx/nginx.conf
+      - ./public/assets:/var/www/public/assets
     ports:
     - "8030:80"
