--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@nestjs/platform-express": "^7.0.0",
     "hbs": "^4.1.0",
     "reflect-metadata": "^0.1.13",
+    "hbs": "^4.1.0",
     "rimraf": "^3.0.2",
     "rxjs": "^6.5.4",
     "sqlite3": "^4.1.1",
