updated prod docker-compose.prod.yml

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -7,7 +7,7 @@ services:
       dockerfile: ./.docker/node.dockerfile
     volumes:
       - ./src:/usr/src/app/src
-    command: "npm run start:dev"
+    command: "npm run start"
     ports:
     - "3000:3000"
   nginx:
