--- a/ormconfig.json
+++ b/ormconfig.json
@@ -1,9 +1,9 @@
 {
   "type": "mysql",
-  "host": "127.0.0.1",
+  "host": "35.198.105.207",
   "port": 3306,
   "username": "root",
-  "password": "root",
+  "password": "E8y5KKQ887%tKW",
   "database": "wwv",
   "entities": [
     "dist/**/*.entity{.ts,.js}"
