--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@google-cloud/storage": "^4.6.0",
     "@nestjs/common": "^7.0.0",
     "@nestjs/core": "^7.0.0",
     "@nestjs/mongoose": "^6.4.0",
     "@nestjs/passport": "^7.0.0",
     "@nestjs/platform-express": "^7.0.0",
     "@nestjs/typeorm": "^7.0.0",
+    "express-session": "^1.17.0",
     "hbs": "^4.1.0",
     "mongoose": "^5.9.5",
     "mysql": "^2.18.1",
@@ -38,8 +40,7 @@
     "rxjs": "^6.5.4",
     "sqlite3": "^4.1.1",
     "typeorm": "^0.2.24",
-    "uuid": "^7.0.2",
-    "@google-cloud/storage": "^4.6.0"
+    "uuid": "^7.0.2"
   },
   "devDependencies": {
     "@nestjs/cli": "^7.0.0",
