--- a/ormconfig.json
+++ b/ormconfig.json
@@ -3,7 +3,7 @@
   "host": "35.198.105.207",
   "port": 3306,
   "username": "root",
-  "password": "E8y5KKQ887%tKW",
+  "password": "",
   "database": "wwv",
   "entities": [
     "dist/**/*.entity{.ts,.js}"
