Added File Support Search Entrys may be added now

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
       dockerfile: ./.docker/node.dockerfile
     volumes:
       - ./src:/usr/src/app/src
+      - ./public/uploads:/usr/src/app/public/uploads
     command: "npm run start:dev"
     ports:
     - "3000:3000"
