--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,11 +6,13 @@ services:
       context: .
       dockerfile: ./.docker/node.dockerfile
     volumes:
+      #      TODO change implementation of file storage so that the assets are uploaded to google cloud storage or
+      #      similar and not to filesystem of doker-compose
       - ./src:/usr/src/app/src
       - ./public/uploads:/usr/src/app/public/uploads
     command: "npm run start:dev"
     ports:
-    - "3000:3000"
+      - "3000:3000"
   nginx:
     build:
       context: .
@@ -19,4 +21,4 @@ services:
       - .docker/nginx.conf:/etc/nginx/nginx.conf
       - ./public/assets:/var/www/public/assets
     ports:
-    - "8030:80"
+      - "8030:80"
