--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@nestjs/passport": "^7.0.0",
     "@nestjs/platform-express": "^7.0.0",
     "@nestjs/typeorm": "^7.0.0",
+    "bcrypt": "^4.0.1",
     "express-session": "^1.17.0",
     "hbs": "^4.1.0",
     "mongoose": "^5.9.5",
